--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,9 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 @media (hover: none) {
+  .hover-bg-orange-600:hover {
+    background-color: #f97316 !important; /* Tailwind の bg-orange-500 の色 */
+  }
+  .hover-bg-blue-600:hover {
+    background-color: #3b82f6 !important; /* Tailwind の bg-blue-500 の色 */
+  }
+  .hover-bg-green-700:hover {
+    background-color: #16a34a !important; /* Tailwind の bg-green-600 の色 */
+  }
+  .hover-bg-blue-500:hover {
+    background-color: #6b7280 !important; /* Tailwind の bg-gray-500 の色 */
+  }
+
   button:hover {
-    color: inherit !important;
-    background-color: inherit !important;
     scale: inherit !important;
   }
 }
